--- a/demo_circdia.tex
+++ b/demo_circdia.tex
@@ -10,7 +10,7 @@
 
 \title{Example Use of CircDia}
 \author{Harald Pretl, IIC, Johannes Kepler University Linz}
-\date{\textcopyright~2021}
+\date{\textcopyright~2021--2022}
 
 \begin{document}
 	\maketitle
