--- a/circdia.sty
+++ b/circdia.sty
@@ -1485,7 +1485,8 @@
   \draw (-0.3, -0.5) -- (0.1, -0.5) arc (-90 : 90 : 0.5) -- (-0.3, 0.5);
  }{}
  \ifthenelse{\equal{\cdorient}{R}}{
-  \draw (0.3, 0.5) -- (-0.1, 0.5) arc (90 : 270 : 0.5) -- (0.3, -0.5);
+  %\draw  [red] (0.3, 0.5) -- (-0.1, 0.5) arc (90 : 270 : 0.5) -- (0.3, -0.5);
+  \draw (0.3, 0.45) -- ++(-0.45, 0) arc (90 : 270 : 0.45) -- ++(0.45, 0);
  }{}
  \ifthenelse{\equal{\cdorient}{U}}{
   \draw (-0.5, 0.3) -- (-0.5, -0.1) arc (-180 : 0 : 0.5) -- (0.5, 0.3);
