Update version string

--- a/cd-block.sty
+++ b/cd-block.sty
@@ -1,6 +1,6 @@
 % cd-block.sty (formerly known as cd-control.sty)
 % from http://www.taylorgruppe.de/circdia/
-% File created by Stefan Krause -- version 3.1.
+% File created by Stefan Krause -- version 3.1a -- 2023/02/19.
 % Supports control or telecommunication engineering block symbols for circdia.sty.
 % Low-level commands
 \newcommand{\cdBigarrow}[4][]{
